--- a/css/pagina1.css
+++ b/css/pagina1.css
@@ -5,8 +5,13 @@
 button {
     background-color: #3eb25e;
     border-radius: 100px;
-    width: 199px;
-    font-size: 25px;
+    font-size: 20px;
+    width: 190px;
+    height: 50px;
+    border: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 button:hover{
