--- a/css/pagina2.css
+++ b/css/pagina2.css
@@ -32,15 +32,21 @@ button:hover{
 }
 
 h1{
-    font-size: 100px;
+    font-size: 80px;
 }
 
 p{
     font-size: 35px;
-    font-weight: 700;
+    
 }
 
 a {
     color: white;
     font-weight: 700;
+}
+
+.botoes {
+    
+    display: flex;
+    gap: 20px;
 }
